# bachelors_thesis

./: .gitignore  .gitmodules  LICENSE.md  README.md
Code/: .gitignore  CMakeLists.txt  links.txt
Code/benchmark/: CMakeLists.txt  bench.cpp  utils.h
Code/include/numdb/: binning_adapter.h  coarse_lock_adapter.h  coarse_lock_concurrent_adapter.h  dummy_container.h  dummy_engine.h  dummy_function_cache.h  event_counter.h  fair_lfu.h  fair_lru.h  fixed_hashtable.h  fixed_hashtable_base.h  fixed_hashtable_fair_lru.h  fixed_hashtable_function_cache.h  function_cache.h  function_cache_core.h  initial_priority_generator.h  numdb.h  priority.h  splay_tree.h  splay_tree_base.h  splay_tree_fair_lru.h  splay_tree_strategy.h  utils.h
Code/include/numdb/cndc/: cndc.h
Code/include/numdb/concurrent_adapters/: binning_adapter.h  coarse_lock_adapter.h
Code/include/numdb/hash_table/: concurrent_hashtable_binary_heap.h  fixed_hashtable_base.h  fixed_hashtable_binary_heap.h  fixed_hashtable_fair_lru.h  fixed_hashtable_fair_lu.h  fixed_hashtable_function_cache.h
Code/include/numdb/splay_tree/: splay_tree_base.h  splay_tree_bottom_node.h  splay_tree_fair_lru.h  splay_tree_fair_lu.h  splay_tree_random_bottom_node.h  splay_tree_strategy.h
Code/include/numdb/wst/: weighted_search_tree.h
Code/lib/: CMakeLists.txt  fair_lfu.cpp  fair_lru.cpp
Code/lib/numdb/: fair_lru.cpp  function_cache_core.cpp  numdb.cpp
Code/src/: main.cpp
Code/test/: CMakeLists.txt  fair_lru_test.cpp  fixed_hashtable_fair_lru_test.cpp  playground.cpp  splay_tree_test.cpp
Code/test/benchmark/: bench.cpp  bench.h  main.cpp  util.h  utils.h
Code/test/unit/: CMakeLists.txt  fair_lru_test.cpp  fixed_hashtable_fair_lru_test.cpp  splay_tree_test.cpp
Text/: BP_Kroilov_Viacheslav_2017.tex  FITthesis.cls  bibliography.bib  compile.sh
Text/tex/: 0_Introduction.tex  1_Preliminaries.tex  2_Numerical_database.tex  3_Numerical_database_variations.tex  4_Library_implementation.tex  5_Library_performance.tex  Conclusion.tex  X_Appendix_1.tex
